--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,4 +3,5 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,111,1) 50%, rgba(0,212,255,1) 100%);
     color: lightgrey;
     padding: 30px;
+    font-family: 'Comfortaa', cursive;
 }
